had a css styling bug with overflow from bottom. fixed it, need to merge with main branch as problem is there too.

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -148,6 +148,7 @@ main {
     padding: .5rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.445);
     max-height: 100vh;
+    overflow: auto;
     position: relative;
 }
 
@@ -257,7 +258,7 @@ main {
 .sec-4 {
     display: flex;
     flex-direction: column;
-    max-height: 8rem;
+    max-height: 10rem;
     overflow: auto;
 }
 
